# stock-info-api

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  setup.cfg
.github/workflows/: docker-image-latest-dev.yml  docker-image-latest.yml  docker-image-release.yaml  docker-image.yml  docker-publish.yml
stock_info_api/: config.py  main.py  redis_ohlc_fetcher.py
tests/: test_api.py
