[metadata]
name = stock-info-api
version = attr: stock_info_api.__version__
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://github.com/MattiasDC/{name}
platform = any
long_description = stock-info-api is a Python microservice application that serves a REST API to query stock information available on external sources.

[options]
python_requires = >= 3.9
packages = find:
install_requires =
	aioredis
	fastapi
    simputils==0.1.0
    python-dateutil
    stock-market-lib==0.1.5
	uvicorn

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    black
    fakeredis
    flake8
    isort
    nox
    pre-commit
    pytest
    pytest-asyncio
    yamllint


[flake8]
max-line-length = 88
exclude =
    .env
    .nox
    *.egg-info

[isort]
profile = black
skip =
    .env
    .nox
    *.egg-info

[tool:pytest]
asyncio_mode = auto
filterwarnings = 
    ignore:The localize method is no longer necessary, as this time zone supports the fold attribute